*Техническое задание проекта №10 1.3 1. Обновить логирование 2. Добавить apache StringUtils 3. Исправить исключения extends Exception 4. Создать метод для тестов